fix: aligned address bottom bar

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -1525,7 +1525,7 @@ a {
   }
 
   .contact-details {
-    left: 40px;
+    left: 0px;
     margin-bottom: 14px;
     .contact-methods {
       list-style: none;
